avanzo prueba de que conat es concurrent monoid, me falta la mitad de interchange

--- a/doc/latex/Instances/ConcurrentMonoid.tex
+++ b/doc/latex/Instances/ConcurrentMonoid.tex
@@ -362,20 +362,16 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}+-cong\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}+-cong\AgdaUnderscore{}}}%
+\>[257I]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSpace{}%
 \AgdaBound{m₁}\AgdaSpace{}%
 \AgdaBound{m₂}\AgdaSpace{}%
 \AgdaBound{n₁}\AgdaSpace{}%
 \AgdaBound{n₂}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-%
-\>[2]\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
 \AgdaBound{i}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
 \AgdaBound{m₁}\AgdaSpace{}%
@@ -387,8 +383,10 @@
 \AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
 \AgdaBound{n₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{∼}}\AgdaSpace{}%
-\AgdaBound{n₂}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{n₂}\<%
+\\
+\>[257I][@{}l@{\AgdaIndent{0}}]%
+\>[10]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
 \AgdaBound{i}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
@@ -511,7 +509,7 @@
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}+-mono\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[366I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[367I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSpace{}%
 \AgdaBound{m₁}\AgdaSpace{}%
 \AgdaBound{m₂}\AgdaSpace{}%
@@ -519,7 +517,7 @@
 \AgdaBound{n₂}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[366I]%
+\>[.][@{}l@{}]\<[367I]%
 \>[11]\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
 \AgdaBound{i}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
@@ -733,7 +731,7 @@
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{.}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{m}\AgdaSymbol{\}}%
-\>[532I]\AgdaSymbol{\{.}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\>[533I]\AgdaSymbol{\{.}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{zero}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{zero}\AgdaSymbol{\}}%
@@ -742,18 +740,18 @@
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[532I]%
+\>[.][@{}l@{}]\<[533I]%
 \>[24]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{.}\AgdaField{force}%
-\>[542I]\AgdaSymbol{→}\AgdaSpace{}%
+\>[543I]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{transitive-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max-right-identity}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{m}\AgdaSymbol{))}\<%
 \\
-\>[542I][@{}l@{\AgdaIndent{0}}]%
+\>[543I][@{}l@{\AgdaIndent{0}}]%
 \>[40]\AgdaSymbol{(}\AgdaFunction{transitive-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\<%
@@ -871,11 +869,11 @@
 \AgdaBound{m}\AgdaSpace{}%
 \AgdaBound{o}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaSymbol{λ}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}%
+\>[640I]\AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaSymbol{.}\AgdaField{force}%
-\>[642I]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{transitive-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max-assoc}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
@@ -885,8 +883,8 @@
 \AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
 \AgdaBound{o}\AgdaSymbol{))}\<%
 \\
-\>[642I][@{}l@{\AgdaIndent{0}}]%
-\>[40]\AgdaSymbol{(}\AgdaFunction{reflexive-∼}\AgdaSpace{}%
+\>[640I][@{}l@{\AgdaIndent{0}}]%
+\>[29]\AgdaSymbol{(}\AgdaFunction{reflexive-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{max-cong}}\AgdaSpace{}%
@@ -997,7 +995,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}max-mono\AgdaUnderscore{}}}%
-\>[729I]\AgdaSymbol{:}\AgdaSpace{}%
+\>[730I]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSpace{}%
 \AgdaBound{m₁}\AgdaSpace{}%
@@ -1006,7 +1004,7 @@
 \AgdaBound{n₂}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[729I]%
+\>[.][@{}l@{}]\<[730I]%
 \>[11]\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
 \AgdaBound{i}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
@@ -1161,7 +1159,7 @@
 \end{code} 
 %</commmax>
 
-%<*interchange>
+%<*maxmenorsuma>
 \begin{code} %
 \>[0]\AgdaFunction{max≤+}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1201,7 +1199,7 @@
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{.}\AgdaField{force}%
-\>[900I]\AgdaSymbol{→}\AgdaSpace{}%
+\>[901I]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{transitive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max≤+}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{m}\AgdaSpace{}%
@@ -1213,16 +1211,18 @@
 \AgdaFunction{pred}\AgdaSpace{}%
 \AgdaBound{n}\AgdaSymbol{\})}\<%
 \\
-\>[900I][@{}l@{\AgdaIndent{0}}]%
+\>[901I][@{}l@{\AgdaIndent{0}}]%
 \>[40]\AgdaSymbol{(}\AgdaFunction{reflexive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{+-mono}}\AgdaSpace{}%
 \AgdaFunction{pred≤}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code} 
+%</maxmenorsuma> 
+
+%<*itipo>
+\begin{code}%
 \>[0]\AgdaFunction{interchange}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
@@ -1250,7 +1250,11 @@
 \AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{)}\<%
-\\
+\end{code}
+%</itipo>
+
+%<*icaso1>
+\begin{code}%
 \>[0]\AgdaFunction{interchange}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
@@ -1260,13 +1264,13 @@
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{reflexive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{zero}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
-\AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{zero}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{))}\<%
-\\
+\AgdaBound{b}\AgdaSpace{}%
+\AgdaBound{d}\AgdaSymbol{)}\<%
+\end{code}
+%</icaso1>
+
+%<*icaso2>
+\begin{code}%
 \>[0]\AgdaFunction{interchange}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
@@ -1276,17 +1280,17 @@
 \AgdaBound{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{reflexive-≤}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{zero}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
-\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{))}\<%
-\\
+\AgdaBound{d}\AgdaSymbol{)}\<%
+\end{code}
+%</icaso2>
+
+%<*icaso3>
+\begin{code}%
 \>[0]\AgdaFunction{interchange}%
-\>[972I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[965I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1295,25 +1299,25 @@
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[972I]%
+\>[.][@{}l@{}]\<[965I]%
 \>[12]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
 \AgdaSymbol{→}%
-\>[984I]\AgdaSymbol{(}\AgdaFunction{transitive-≤}\AgdaSpace{}%
+\>[977I]\AgdaSymbol{(}\AgdaFunction{transitive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{∼→≤}%
-\>[986I]\AgdaSymbol{(}\AgdaFunction{reflexive-∼}\AgdaSpace{}%
+\>[979I]\AgdaSymbol{(}\AgdaFunction{reflexive-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[986I]%
+\>[.][@{}l@{}]\<[979I]%
 \>[48]\AgdaOperator{\AgdaFunction{max-cong}}\AgdaSpace{}%
 \AgdaFunction{+-right-identity}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)))}\<%
 \\
-\>[.][@{}l@{}]\<[984I]%
+\>[.][@{}l@{}]\<[977I]%
 \>[29]\AgdaSymbol{(}\AgdaFunction{transitive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max≤+}\AgdaSpace{}%
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
@@ -1323,41 +1327,49 @@
 \AgdaBound{c}\AgdaSymbol{\})}\<%
 \\
 %
-\>[29]\AgdaSymbol{(}\AgdaFunction{transitive-≤}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{∼→≤}\AgdaSpace{}%
+\>[29]\AgdaSymbol{(}\AgdaFunction{transitive-≤}%
+\>[991I]\AgdaSymbol{(}\AgdaFunction{∼→≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{+-comm}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)))}\<%
 \\
-%
-\>[29]\AgdaSymbol{((}\AgdaFunction{reflexive-≤}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[991I]%
+\>[43]\AgdaSymbol{((}\AgdaFunction{reflexive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{+-mono}}\AgdaSpace{}%
-\AgdaFunction{transitive-≤}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{+-mono}}\<%
+\\
+%
+\>[43]\AgdaFunction{transitive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{≤suc}\AgdaSpace{}%
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{b}\AgdaSymbol{\})}\<%
 \\
-%
-\>[29]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\>[43][@{}l@{\AgdaIndent{0}}]%
+\>[44]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
+\AgdaSymbol{\{}%
+\>[1003I]\AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{∼→≤}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{symmetric-∼}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max-right-identity}%
-\>[1016I]\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{symmetric-∼}\<%
+\\
+\>[1003I][@{}l@{\AgdaIndent{0}}]%
+\>[54]\AgdaSymbol{(}\AgdaFunction{max-right-identity}%
+\>[1007I]\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)))}\<%
 \\
-\>[1016I][@{}l@{\AgdaIndent{0}}]%
-\>[86]\AgdaSymbol{\}))}\AgdaSpace{}%
+\>[1007I][@{}l@{\AgdaIndent{0}}]%
+\>[76]\AgdaSymbol{\}))}\AgdaSpace{}%
 \AgdaSymbol{)))}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
-\\
+\end{code} 
+%</icaso3> 
+
+%<*icaso4>
+\begin{code}%
 \>[0]\AgdaFunction{interchange}%
-\>[1020I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[1011I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1367,13 +1379,13 @@
 \AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[1020I]%
+\>[.][@{}l@{}]\<[1011I]%
 \>[12]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
 \AgdaSymbol{→}%
-\>[1033I]\AgdaFunction{transitive-≤}\AgdaSpace{}%
+\>[1024I]\AgdaFunction{transitive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{interchange}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
@@ -1383,75 +1395,79 @@
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{))}\<%
 \\
-\>[.][@{}l@{}]\<[1033I]%
+\>[.][@{}l@{}]\<[1024I]%
 \>[29]\AgdaSymbol{((}\AgdaFunction{reflexive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{+-mono}}\AgdaSpace{}%
-\AgdaFunction{transitive-≤}\<%
+\AgdaOperator{\AgdaFunction{+-mono}}\<%
 \\
 %
-\>[29]\AgdaSymbol{(}\AgdaFunction{∼→≤}\AgdaSpace{}%
+\>[29]\AgdaFunction{transitive-≤}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{∼→≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max-comm}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{)))}\<%
 \\
-%
-\>[29]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\>[29][@{}l@{\AgdaIndent{0}}]%
+\>[33]\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
+\AgdaSymbol{\{}%
+\>[1044I]\AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{transitive-≤}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{∼→≤}%
-\>[1057I]\AgdaSymbol{(}\AgdaFunction{max-comm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{)}\<%
+\AgdaFunction{transitive-≤}\<%
 \\
-\>[1057I][@{}l@{\AgdaIndent{0}}]%
-\>[66]\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
+\>[1044I][@{}l@{\AgdaIndent{0}}]%
+\>[44]\AgdaSymbol{(}\AgdaFunction{∼→≤}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{max-comm}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
+\AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{))))}\<%
 \\
 %
-\>[29]\AgdaSymbol{(}\AgdaFunction{pred≤}\AgdaSpace{}%
+\>[44]\AgdaSymbol{(}\AgdaFunction{pred≤}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{max-mono}}\AgdaSpace{}%
 \AgdaFunction{reflexive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaSymbol{\}))}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
-\\
+\end{code} 
+%</icaso4>
+
+%<*icaso5>
+\begin{code}%
 \>[0]\AgdaFunction{interchange}%
-\>[1068I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[1059I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[1068I]%
+\>[.][@{}l@{}]\<[1059I]%
 \>[12]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{∼→≤}%
-\>[1080I]\AgdaSymbol{(}\AgdaFunction{transitive-∼}\AgdaSpace{}%
+\>[1071I]\AgdaSymbol{(}\AgdaFunction{transitive-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max-right-identity}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{))}\<%
 \\
-\>[.][@{}l@{}]\<[1080I]%
+\>[.][@{}l@{}]\<[1071I]%
 \>[33]\AgdaSymbol{((}\AgdaFunction{symmetric-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max-right-identity}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)))}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{)))}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{+-cong}}\<%
 \\
 \>[33][@{}l@{\AgdaIndent{0}}]%
@@ -1459,9 +1475,13 @@
 \AgdaSymbol{(}\AgdaFunction{max-right-identity}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{))))}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
-\\
+\end{code}
+%</icaso5>
+
+%<*icaso6>
+\begin{code}%
 \>[0]\AgdaFunction{interchange}%
-\>[1093I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[1084I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
@@ -1470,7 +1490,7 @@
 \AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[1093I]%
+\>[.][@{}l@{}]\<[1084I]%
 \>[12]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
@@ -1478,12 +1498,12 @@
 \AgdaSymbol{→}%
 \>[30]\AgdaFunction{transitive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{∼→≤}%
-\>[1106I]\AgdaSymbol{((}\AgdaFunction{+-right-identity}\AgdaSpace{}%
+\>[1097I]\AgdaSymbol{((}\AgdaFunction{+-right-identity}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{max-cong}}\<%
 \\
-\>[1106I][@{}l@{\AgdaIndent{0}}]%
+\>[1097I][@{}l@{\AgdaIndent{0}}]%
 \>[61]\AgdaSymbol{(}\AgdaFunction{reflexive-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{))))}\<%
@@ -1503,9 +1523,13 @@
 \AgdaOperator{\AgdaFunction{+-mono}}\AgdaSpace{}%
 \AgdaFunction{≤suc}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
-\\
+\end{code} 
+%</icaso6>
+
+%<*icaso7> 
+\begin{code}%
 \>[0]\AgdaFunction{interchange}%
-\>[1122I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[1113I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
@@ -1515,13 +1539,13 @@
 \AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[1122I]%
+\>[.][@{}l@{}]\<[1113I]%
 \>[12]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
 \AgdaSymbol{→}%
-\>[1135I]\AgdaFunction{transitive-≤}\AgdaSpace{}%
+\>[1126I]\AgdaFunction{transitive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{interchange}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1531,7 +1555,7 @@
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{))}\<%
 \\
-\>[.][@{}l@{}]\<[1135I]%
+\>[.][@{}l@{}]\<[1126I]%
 \>[29]\AgdaSymbol{((}\AgdaFunction{reflexive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
@@ -1552,7 +1576,11 @@
 \AgdaFunction{pred≤}%
 \>[86]\AgdaSymbol{\})}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
-\\
+\end{code}
+%</icaso7>
+
+%<*icaso8>
+\begin{code}%
 \>[0]\AgdaFunction{interchange}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
@@ -1576,7 +1604,7 @@
 \AgdaBound{d}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
 \end{code} 
-%</interchange>
+%</icaso8>
 
 %<*eqpartial>
 \begin{code} %
@@ -1589,14 +1617,14 @@
 \\
 \>[0]\AgdaFunction{eq-∼}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[1186I]\AgdaKeyword{record}\AgdaSpace{}%
+\>[1177I]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaField{refl}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{reflexive-∼}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\<%
 \\
-\>[1186I][@{}l@{\AgdaIndent{0}}]%
+\>[1177I][@{}l@{\AgdaIndent{0}}]%
 \>[13]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaField{sym}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1624,18 +1652,18 @@
 \>[0]\AgdaFunction{partial-≤}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{record}%
-\>[1209I]\AgdaSymbol{\{}\AgdaSpace{}%
+\>[1200I]\AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaField{isPreorder}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[1209I]%
+\>[.][@{}l@{}]\<[1200I]%
 \>[19]\AgdaKeyword{record}%
-\>[1212I]\AgdaSymbol{\{}\AgdaSpace{}%
+\>[1203I]\AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaField{isEquivalence}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{eq-∼}\<%
 \\
-\>[1212I][@{}l@{\AgdaIndent{0}}]%
+\>[1203I][@{}l@{\AgdaIndent{0}}]%
 \>[27]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaField{reflexive}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1673,9 +1701,9 @@
 \\
 \>[0]\AgdaFunction{conatConcurrent}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[1234I]\AgdaInductiveConstructor{makeConcurrentMonoid}\<%
+\>[1225I]\AgdaInductiveConstructor{makeConcurrentMonoid}\<%
 \\
-\>[1234I][@{}l@{\AgdaIndent{0}}]%
+\>[1225I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
 \AgdaPostulate{∞}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{]\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
