--- a/doc/tex/apendice.tex
+++ b/doc/tex/apendice.tex
@@ -44,3 +44,6 @@ El lema \AgdaFunction{\_max-cong\_} representa la propiedad análoga a la anteri
 
 El siguiente lema, \AgdaFunction{pred-max}, demuestra que el máximo de los predecesores de dos conúmeros es igual al predecesor del máximo de los mismos.
 \ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{predmax}
+
+Por último, el lema \AgdaFunction{max$\leq$+} prueba que el máximo de dos conúmeros siempre es menor o igual a su suma.
+\ExecuteMetaData[latex/Instances/ConcurrentMonoid.tex]{maxmenorsuma}
